PyMaker/datas/object2/RawHTML/Python_DOC_referPages.error-in-installing-pdfminer-package-in-anaconda.txt
<div class="post-text" itemprop="text">
<p>I have installed <code>Anaconda 2.5</code> and used spyder with <code>Python2.7</code> for sometime. I used <code>pdfminer</code> those days. Then I wanted to use <code>Python3.6</code>. So I have uninstalled Anaconda and installed <code>Anaconda3.5</code>. And there is no problem in using <code>Python3.5</code> and I used more packages too. But now am trying to install <code>pdfminer</code>. Am getting some errors.</p>
<pre><code>  Using cached https://files.pythonhosted.org/packages/57/4f/e1df0437858188d2d36466a7bb89aa024d252bd0b7e3ba90cbc567c6c0b8/pdfminer-20140328.tar.gz
        Complete output from command python setup.py egg_info:  
    Traceback (most recent call last):
    File "&lt;string&gt;", line 1, in &lt;module&gt;                     

    File "C:\Users\PRIYA~1.MUT\AppData\Local\Temp\pip-install-fzctx8lo\pdfminer\setup.py",line 3, in &lt;module&gt; 
       from pdfminer import __version__
File "C:\Users\PRIYA~1.MUT\AppData\Local\Temp\pip-install-fzctx8lo\pdfminer\pdfminer\__init__.py", line 5                 
       print __version__                                                                                                                       
       ^                                                                                          

`SyntaxError: Missing parentheses in call to 'print'. Did you mean print(__version__)?` 
</code></pre>
<p>I knew there is some issues because <code>print __version__</code> needs to be like <code>print (__version__)</code>. but I don't know where I need to edit. And this path</p>
<blockquote>
<p>"C:\Users\PRIYA~1.MUT\AppData\Local\Temp\pip-install-fzctx8lo\pdfminer\pdfminer__init__.py"</p>
</blockquote>
<p>doesn't exist on my system.Kindly help me in solving this.</p>
</div>
<div class="post-text" itemprop="text">
<p>I manually downloaded <code>pdfminer-20140328.tar.gz</code> from the link  <a href="https://pypi.org/project/pdfminer/" rel="nofollow noreferrer">https://pypi.org/project/pdfminer/</a>  and tried to install it using the command <code>pip install -e &lt;path&gt;</code>. But I got the same error. Then I have opened the <code>pdfminer__init__.py</code> file and edited accordingly to <code>Python3.6</code>. I have no idea why <code>pdfminer</code> package doesn't support <code>Python3.6</code> directly. Eventhough installed, there is some dependency error. So I can't use that in <code>Python3.6</code>. </p>
</div>
<span class="comment-copy">Try to look for this file <code>pdfminer-20140328.tar.gz</code> in your system and remove it. That could help.</span>
<span class="comment-copy">There is no file named <code>pdfminer-20140328.tar.gz</code> in my system. But I've solved this problem with your idea.</span>
<span class="comment-copy">Ok, good to know!!</span>
<span class="comment-copy">From <a href="https://euske.github.io/pdfminer/index.html" rel="nofollow noreferrer">euske.github.io/pdfminer/index.html</a>: Python. (for version 2.4 or newer). A code that works with Python 2.4 certainly doesn't work with Python 3. It's simply too old; last release was in 2010.</span>
<span class="comment-copy">OMG. So is there any alternative package for pdfminer in Python3.6 . I need to extract texts from pdf's.</span>
<span class="comment-copy">I don't know but let me <a href="https://stackoverflow.com/search?q=%5Bpython%5D+extract+texts+from+pdf">search</a>. I see <a href="https://pypi.org/project/PyPDF2/" rel="nofollow noreferrer">PyPDF2</a>; textract supports PDFs via <a href="https://poppler.freedesktop.org/" rel="nofollow noreferrer">poppler</a> and <a href="https://github.com/pdfminer/pdfminer.six" rel="nofollow noreferrer">pdfminer.six</a>; the latter is a fork of pdfminer update for Python 2+3. I'm sure there're much <a href="https://pypi.org/search/?q=pdf" rel="nofollow noreferrer">more</a>.</span>
